2012-08-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-accept-process-output): Accept only output from
	PROC.  Otherwise, process filters and sentinels might be confused.
	(Bug#12145)

2012-08-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-handle-start-file-process): Eliminate
	superfluous prompt.  (Bug#12203)

2012-08-16  Glenn Morris  <rgm@gnu.org>

	* tramp.el:
	* tramp-smb.el: Replace version 24.2 with 24.3 where appropriate.

2012-08-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-open-shell): Cache the shell name.
	(tramp-find-shell, tramp-open-connection-setup-interactive-shell):
	Use cached shell name.

2012-08-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-find-file-exists-command): Protect the tests
	by `ignore-error'.
	(tramp-find-shell): Open also a new shell, when cache is already
	set.  Reported by Carsten Bormann <cabo@tzi.org>.  (Bug#12148)

2012-07-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-restricted-shell-hosts-alist): New defcustom.

	* tramp-sh.el (tramp-maybe-open-connection): Handle it.

2012-07-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-handle-write-region): uid and gid can be
	floats.  Reported by Russell Sim <russell.sim@gmail.com>.

2012-07-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-do-directory-files-and-attributes-with-stat):
	Redirect stderr to /dev/null.

2012-07-01  Glenn Morris  <rgm@gnu.org>

	* tramp-gvfs.el: Remove outdated and unnecessary dbus declarations.

2012-07-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-handle-vc-registered): Hide errors.
	(tramp-vc-file-name-handler): Use dummy results for `process-file'
	and `start-file-process'.

2012-06-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-temporary-file-directory): In
	XEmacs, there is no standard-value for `temporary-file-directory'.
