@@ -1,3 +1,7 @@
+2012-08-29  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-remote-path): Add "/sbin" and "/usr/local/sbin".
+
 2012-08-20  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-accept-process-output): Accept only output from
